--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@edgestore/server": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
-    "@paralleldrive/cuid2": "^2.2.2",
+    "@paralleldrive/cuid2": "github:paralleldrive/cuid2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,7 +27,11 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@tanstack/react-table": "^8.19.3",
+    "@tiptap/extension-link": "^2.5.4",
+    "@tiptap/react": "^2.5.4",
+    "@tiptap/starter-kit": "^2.5.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
