--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.18",
