--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
-    "db:seed": "tsx src/server/db/seed.ts"
+    "db:seed": "tsx src/server/db/seed.ts",
+    "dbml": "tsx src/server/db/dbml.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
@@ -69,12 +70,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-dbml-generator": "^0.8.0",
     "drizzle-kit": "^0.23.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5"
   }
